code25_all/scala/2897301.txt
user=> (map #(* % 2) (concat [1.1 3] [5 7]))

(2.2 6 10 14)

scala> List(1.1,3) ::: List(5, 7) map (_ * 2)

<console>:6: error: value * is not a member of AnyVal
       List(1.1,3) ::: List(5, 7) map (_ * 2)
                                       ^

